fix(featured-section): items align and img align

--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ nav{
         display: none;
     }
 }
-/* --- main --- */
+                                        /* --- main --- */
 
 .hero-section{
     padding: 40% 0;
@@ -233,6 +233,45 @@ nav{
     width: 40%;
 }
 
+.title-section-container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    margin-bottom: 10%;
+}
+
+.title-section-container h2{
+    font-weight: 500;
+}
+
+.title-section-container p{
+    color: #6C6C72;
+    font-weight: 400;
+}
+
+.features-section{
+    background-color: #5956E9;
+    color: #ffffff;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.feat-container{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+}
+
+
+
 @media screen and (max-width: 425px) and (min-width:0px){
 
     .hero-section{
@@ -264,20 +303,6 @@ nav{
 
     .about-section img{
         width: 70%;
-    }
-
-    .title-section-container{
-        width: 90%;
-        text-align: center;
-    }
-
-    .title-section-container h2{
-        font-weight: 500;
-    }
-    
-    .title-section-container p{
-        color: #6C6C72;
-        font-weight: 400;
     }
 
     .adv-about-container{
@@ -327,6 +352,13 @@ nav{
         color: #6C6C72;
         font-weight: 400;
         line-height: 25px;
+    }
+
+    /*--- features section---*/
+
+    .order-feat-container{
+        width: 100%;
+        overflow: hidden;
     }
 
 }
